KEDA/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sum-deployment
spec:
  replicas: 10
  selector:
    matchLabels:
      app: sum
  template:
    metadata:
      labels:
        app: sum
    spec:
      containers:
        - name: sum-container
          image: python:3.9
          command: ["sh", "-c", "pip install flask && python /app/server.py"]
          volumeMounts:
            - name: config-volume
              mountPath: /app
          ports:
            - containerPort: 5000
      volumes:
        - name: config-volume
          configMap:
            name: sum-config
