KEDA/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sum-service
spec:
  selector:
    app: sum
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
